<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RuletaPro</string>
    <string name="tab_input">Input</string>
    <string name="tab_history">Grid</string>
    <string name="hint_enter_number">Enter number (0-36)</string>
    <string name="button_clear">Clear</string>
    <string name="button_enter">Enter</string>
    <string name="stat_1">Stat 1</string>
    <string name="stat_2">Stat 2</string>
    <string name="stat_3">Stat 3</string>
    <string name="stat_4">Stat 4</string>
    <string name="stat_5">Stat 5</string>
    <string name="stat_6">Stat 6</string>
    <string name="stat_7">Stat 7</string>
    <string name="stat_8">Stat 8</string>
    <string name="delete_last">Borrar último</string>
    <string name="delete_all">Borrar todo</string>
    <string name="export">Exportar CSV</string>
    <string name="number_saved">Número %d guardado</string>
    <string name="invalid_number">Ingrese un número válido (0-36)</string>
    <string name="button_zero">0</string>
    <string name="empty_stat">-</string>
    <string name="column_counter_1">Col 1</string>
    <string name="column_counter_2">Col 2</string>
    <string name="column_counter_3">Col 3</string>
    <string name="column_counter_1_2">Col 1_2</string>
    <string name="column_counter_2_2">Col 2_2</string>
    <string name="column_counter_3_2">Col 3_2</string>
    <string name="export_success">Archivo exportado exitosamente</string>
    <string name="export_error">Error al exportar archivo</string>
    <string name="share_file">Compartir archivo</string>
    <string name="welcome_title"></string>
    <string name="welcome_subtitle"></string>
    <string name="start_button">START</string>
</resources>